--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>Pyramid Clothing</title>
     <link rel="stylesheet" href="style.css">
   </head>
@@ -9,7 +10,7 @@
         <div class="nav">
 
           <div class="logo">
-            <a id="home">P</a>
+            <a id="home">logo</a>
           </div>
 
           <div class="links">
@@ -24,11 +25,11 @@
 
         </div>
       </div>
-      <div class="home">
-        <h1>Home</h1>
+      <div class="pyramid">
+        <h1>PYRAMID CLOTHING</h1>
         <h3>
           Welcome to Pyramid Clothing. We started as a group of 3
-          mates and have created a brand that is streetwear.
+          mates and have created an exclusive brand of graphic streetwear.
         </h3>
       </div>
       <div class="footer">
