--- a/store.html
+++ b/store.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Pyramid Clothing</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="store.css">
     <link rel="icon" href="img/logo1.png" type="image/png" sizes="60x60">
   </head>
     <body>
@@ -28,13 +28,36 @@
 
         </div>
       </div>
+
       <div class="pyramid">
-        <h1>PYRAMID CLOTHING</h1>
-        <h3>
-          Welcome to Pyramid Clothing. We started as a group of 3
-          mates and have created an exclusive brand of graphic streetwear.
-        </h3>
+        <h1>STORE</h1>
       </div>
+
+    <div class="store">
+      <div class="gallery">
+        <a target="_blank" href="img/">
+          <img src="img/" alt="tee1" width="400" height="500">
+        </a>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="img/">
+          <img src="img/" alt="tee2" width="400" height="500">
+        </a>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="img/">
+          <img src="img/" alt="tee3" width="400" height="500">
+        </a>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="img/">
+          <img src="img/" alt="tee4" width="400" height="500">
+        </a>
+      </div>
+    </div>
       <div class="footer">
         <p>Made By AW, LTB, JP.</p>
       </div>
