--- a/store.html
+++ b/store.html
@@ -33,6 +33,18 @@
         <h1>STORE</h1>
       </div>
 
+      <div id="galleryContainer">
+        <div id="galleryImages">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>4</div>
+            <div>5</div>
+            <div>6</div>
+        </div>
+      </div>
+
+<!--
     <div class="store">
       <div class="gallery">
         <a target="_blank" href="img/">
@@ -58,6 +70,13 @@
         </a>
       </div>
     </div>
+  -->
+
+  <!-- VAN YOU CHECK TO SEE WHY THE LOGOS WHEN GOING INBETWEEN
+  THE STORE AND HOME PAGE MOVES ? JUST CHECK THE CODE.
+
+  ILL ADD SOME DESIGNS TO THE PROJECT FOLDER SOON -->
+
       <div class="footer">
         <p>Made By AW, LTB, JP.</p>
       </div>
