--- a/about.html
+++ b/about.html
@@ -32,12 +32,20 @@
         Can someone put a slideshow here with some photos of something.
       -->
       <div class="pyramid">
-        <h1>PYRAMID CLOTHING</h1>
+        <h1>ABOUT US</h1>
         <p>
-          Welcome to Pyramid Clothing. We started as a group of 3
-          mates and have created an exclusive brand of graphic streetwear.
+          We are group of three mates that enjoy clothing. We are all from Wellington, New Zealand.
         </p>
       </div>
+
+      <div class="profiles">
+          <div class="profileImages">
+              <div1>1</div>
+              <div2>2</div>
+              <div3>3</div>
+        </div>
+      </div>
+
       <div class="footer">
         <p>Made By AW, LTB, JP.</p>
       </div>
