--- a/contact.html
+++ b/contact.html
@@ -28,16 +28,14 @@
           </div>
 
       </div>
-      <!--
-        Can someone put a slideshow here with some photos of something.
-      -->
+
       <div class="pyramid">
-        <h1>PYRAMID CLOTHING</h1>
-        <p>
-          Welcome to Pyramid Clothing. We started as a group of 3
-          mates and have created an exclusive brand of graphic streetwear.
-        </p>
+        <h1>CONTACT US</h1>
+      <div class="social"
+        <a href=""></a>
       </div>
+      </div>
+
       <div class="footer">
         <p>Made By AW, LTB, JP.</p>
       </div>
