--- a/store.html
+++ b/store.html
@@ -15,18 +15,18 @@
             <img src="img/logo1.png" alt="logo" width="60" height="45">
             </a>
           </div>
+        </div>
 
           <div class="links">
             <a href="index.html">HOME</a>
             &bull;
             <a href="store.html">STORE</a>
             &bull;
-            <a href="#about">ABOUT</a>
+            <a href="about.html">ABOUT</a>
             &bull;
-            <a href="#contact">CONTACT</a>
+            <a href="contact.html">CONTACT</a>
           </div>
 
-        </div>
       </div>
 
       <div class="pyramid">
@@ -39,8 +39,6 @@
             <div>2</div>
             <div>3</div>
             <div>4</div>
-            <div>5</div>
-            <div>6</div>
         </div>
       </div>
 
