--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
           mates and have created an exclusive brand of graphic streetwear.
         </p>
       </div>
+
+      <div class="banner">
+            <div clas="bannerImg">
+              <!--
+                insert slide show here - Josh
+              -->
+            </div>
+          </div>
+          
       <div class="footer">
         <p>Made By AW, LTB, JP.</p>
       </div>
