--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
           </div>
 
       </div>
-      <!--
-        Can someone put a slideshow here with some photos of something.
-      -->
+
+
       <div class="pyramid">
         <h1>PYRAMID CLOTHING</h1>
         <p>
@@ -41,12 +40,43 @@
 
       <div class="banner">
             <div clas="bannerImg">
-              <!--
-                insert slide show here - Josh
-              -->
+
+              <div class="slideshow-container">
+
+                  <div class="slide 1 fade">
+                    <div class="numbertext">1 / 3</div>
+                    <img src="logo1.png" style="width:100%">
+                      <div class="text">Caption Text</div>
+                  </div>
+
+                <div class="slide 2 fade">
+                  <div class="numbertext">2 / 3</div>
+                  <img src="logo1.png" style="width:100%">
+                  <div class="text">Caption Two</div>
+                </div>
+
+                <div class="slide 3 fade">
+                  <div class="numbertext">3 / 3</div>
+                  <img src="logo2.png" style="width:100%">
+                  <div class="text">Caption Three</div>
+                </div>
+
+                <div>
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                </div>
+                <br>
+
+                <div style="text-align:center">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+              </div>
+
             </div>
+
           </div>
-          
+
       <div class="footer">
         <p>Made By AW, LTB, JP.</p>
       </div>
