--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <title>Pyramid Clothing</title>
     <link rel="stylesheet" href="style.css">
+    <link rel=
     <link rel="icon" href="img/logo1.png" type="image/png" sizes="60x60">
+
   </head>
     <body>
       <div class="header">
@@ -39,43 +41,39 @@
       </div>
 
       <div class="banner">
-            <div clas="bannerImg">
 
-              <div class="slideshow-container">
+        <script>
+        	var i = 0; // Start point
+        	var images = [];
+        	var time = 1000;
 
-                  <div class="slide 1 fade">
-                    <div class="numbertext">1 / 3</div>
-                    <img src="logo1.png" style="width:100%">
-                      <div class="text">Caption Text</div>
-                  </div>
+        	// Image List
+        	images[0] = 'WallSign.jpg';
+        	images[1] = 'WindowSign.jpg';
+        	images[2] = 'WallSign.jpg';
+        	images[3] = 'WindowSign.jpg';
 
-                <div class="slide 2 fade">
-                  <div class="numbertext">2 / 3</div>
-                  <img src="logo1.png" style="width:100%">
-                  <div class="text">Caption Two</div>
-                </div>
+        	// Change Image
+        	function changeImg(){
+        		document.slide.src = images[i];
 
-                <div class="slide 3 fade">
-                  <div class="numbertext">3 / 3</div>
-                  <img src="logo2.png" style="width:100%">
-                  <div class="text">Caption Three</div>
-                </div>
+        		if(i < images.length - 2){
+        			i++;
+        		} else {
+        			i = 0;
+        		}
 
-                <div>
-                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                <a class="next" onclick="plusSlides(1)">&#10095;</a>
-                </div>
-                <br>
+        		setTimeout("changeImg()", time);
+        	}
 
-                <div style="text-align:center">
-                <span class="dot" onclick="currentSlide(1)"></span>
-                <span class="dot" onclick="currentSlide(2)"></span>
-                <span class="dot" onclick="currentSlide(3)"></span>
-              </div>
+        	window.onload = changeImg;
 
-            </div>
+        </script>
 
-          </div>
+          <img name="slide" width="400" height="200">
+
+
+      </div>
 
       <div class="footer">
         <p>Made By AW, LTB, JP.</p>
