Images wont appear

--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
         	var time = 1000;
 
         	// Image List
-        	images[0] = 'WallSign.jpg';
-        	images[1] = 'WindowSign.jpg';
-        	images[2] = 'WallSign.jpg';
-        	images[3] = 'WindowSign.jpg';
+        	images[0] = 'WallSign.png';
+        	images[1] = 'WindowSign.png';
+        	images[2] = 'WallSign.png';
+        	images[3] = 'WindowSign.png';
 
         	// Change Image
         	function changeImg(){
         		document.slide.src = images[i];
 
-        		if(i < images.length - 2){
+        		if(i < images.length - 1){
         			i++;
         		} else {
         			i = 0;
@@ -70,7 +70,7 @@
 
         </script>
 
-          <img name="slide" width="400" height="200">
+          <img name="slide" width="960" height="400">
 
 
       </div>
