--- a/index.html
+++ b/index.html
@@ -3,42 +3,139 @@
   <head>
     <meta charset="utf-8" />
     <title>Pyramid Clothing</title>
+
     <link rel="stylesheet" href="style.css">
-    <link rel=
     <link rel="icon" href="img/logo1.png" type="image/png" sizes="60x60">
+
+
+    <style>
+        * {outline: #DDD solid 1px }
+    </style>
+
+
 
   </head>
     <body>
-      <div class="header">
-        <div class="nav">
 
-          <div class="logo">
-            <a href="index.html">
-            <img src="img/logo1.png" alt="logo" width="60" height="45">
+      <div id="nav">
+            <div id="linksContainer">
+              <div id="links">
+                <a href="index.html">HOME</a>
+
+                <a href="store.html">STORE</a>
+
+                <a href="about.html">ABOUT</a>
+
+                <a href="contact.html">CONTACT</a>
+              </div>
+            </div>
+          </div>
+          <div id="header">
+            <div id="headerExternal">
+      <div id="headerContainer">
+          <div id="logo">
+          <a href="index.html">
+            <img src="img/logo1.png" alt="logo" width="600" height="450">
             </a>
+          </div>
+          <div id="logoNameContainer">
+
+            <h3> - PYRAMID CLOTHING - </h3>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div id="pyramid">
+      <p>
+        WELCOME TO PYRAMID CLOTHING.
+      </p>
+      <p>
+        WE STARTED AS A GROUP THREE MATES
+        WHO HAVE CREATED A EXCLUSIVE BRAND OF GRAPHIC STREETWEAR.
+      </p>
+    </div>
+
+
+    <div id="banner">
+          <div id="bannerSlide">
+
+            <script>
+              var i = 0; // Start point
+              var images = [];
+              var time = 1500;
+
+              // Image List                          FIXED BY JOSH
+              images[0] = src='img/asapslide.jpg';
+              images[1] = 'img/WindowSign.jpg';
+              images[2] = 'img/kendrickslide.jpg';
+              images[3] = 'img/WallSign.jpg';
+              images[4] = 'img/kanyeslide.jpg'
+
+              // Change Image
+              function changeImg(){
+                document.slide.src = images[i];
+
+                if(i < images.length - 1){
+                  i++;
+                } else {
+                  i = 0;
+                }
+
+                setTimeout("changeImg()", time);
+              }
+
+              window.onload = changeImg;
+
+            </script>
+
+              <img name="slide" width="960" height="600">
+
           </div>
         </div>
 
-          <div class="links">
-            <a href="index.html">HOME</a>
-            &bull;
-            <a href="store.html">STORE</a>
-            &bull;
-            <a href="about.html">ABOUT</a>
-            &bull;
-            <a href="contact.html">CONTACT</a>
+        <div id= "postContainer">
+          <div id="shopButtonContainer">
+          <div id="shopButtonIndex">
+
+            <a href="store.html">SHOP NOW!</a>
+
           </div>
-
       </div>
 
+      <!--
+            <div class="header">
 
-      <div class="pyramid">
-        <h1>PYRAMID CLOTHING</h1>
-        <p>
-          Welcome to Pyramid Clothing. We started as a group of 3
-          mates and have created an exclusive brand of graphic streetwear.
-        </p>
-      </div>
+                <div class="logo">
+                  <a href="index.html">
+                  <img src="img/logo1.png" alt="logo" width="60" height="45">
+                  </a>
+                </div>
+              </div>
+
+                <div class="nav">
+                  <div class="links">
+                    <a href="index.html">HOME</a>
+                    &bull;
+                    <a href="store.html">STORE</a>
+                    &bull;
+                    <a href="about.html">ABOUT</a>
+                    &bull;
+                    <a href="contact.html">CONTACT</a>
+                  </div>
+                </div>
+
+
+            <div class="pyramid">
+              <h1>PYRAMID CLOTHING</h1>
+              <p>
+                Welcome to Pyramid Clothing. We started as a group of 3
+                mates and have created an exclusive brand of graphic streetwear.
+              </p>
+            </div>
+
 
       <div class="banner">
 
@@ -47,11 +144,11 @@
         	var images = [];
         	var time = 1000;
 
-        	// Image List
-        	images[0] = 'WallSign.png';
-        	images[1] = 'WindowSign.png';
-        	images[2] = 'WallSign.png';
-        	images[3] = 'WindowSign.png';
+        	// Image List                          FIXED BY JOSH
+        	images[0] = src='img/WallSign.jpg';
+        	images[1] = 'img/WindowSign.jpg';
+        	images[2] = 'img/WallSign.png';
+        	images[3] = 'img/WindowSign.png';
 
         	// Change Image
         	function changeImg(){
@@ -70,13 +167,19 @@
 
         </script>
 
-          <img name="slide" width="960" height="400">
+          <img name="slide" width="960" height="500">
 
 
       </div>
+-->
+        <div id="footerContainer">
+          <div id="footer">
 
-      <div class="footer">
-        <p>Made By AW, LTB, JP.</p>
+          <p>Made By AW, LTB, JP.</p>
+
+        </div>
       </div>
+      </div>
+    </div>
     </body>
 </html>
