--- a/about.html
+++ b/about.html
@@ -7,47 +7,68 @@
     <link rel="icon" href="img/logo1.png" type="image/png" sizes="60x60">
   </head>
     <body>
-      <div class="header">
-        <div class="nav">
+        <div id="nav">
+              <div id="linksContainer">
+                <div id="links">
+                  <a href="index.html">HOME</a>
 
-          <div class="logo">
+                  <a href="store.html">STORE</a>
+
+                  <a href="about.html">ABOUT</a>
+
+                  <a href="contact.html">CONTACT</a>
+                </div>
+              </div>
+            </div>
+            <div id="aboutHeader">
+              <div id="aboutHeaderExternal">
+        <div id="aboutHeaderContainer">
+            <div id="aboutlogo">
             <a href="index.html">
-            <img src="img/logo1.png" alt="logo" width="60" height="45">
-            </a>
+              <img src="img/logo1.png" alt="logo" width="100" height="75">
+              </a>
+            </div>
+            <div id="aboutLogoText">
+
+              <h3> - ABOUT - </h3>
+
+            </div>
           </div>
         </div>
-
-          <div class="links">
-            <a href="index.html">HOME</a>
-            &bull;
-            <a href="store.html">STORE</a>
-            &bull;
-            <a href="about.html">ABOUT</a>
-            &bull;
-            <a href="contact.html">CONTACT</a>
-          </div>
-
       </div>
-      <!--
-        Can someone put a slideshow here with some photos of something.
-      -->
-      <div class="pyramid">
-        <h1>ABOUT US</h1>
+
+
+      <div id="pyramid">
         <p>
-          We are group of three mates that enjoy clothing. We are all from Wellington, New Zealand.
+          WELCOME TO PYRAMID CLOTHING.
+        </p>
+        <p>
+          WE STARTED AS A GROUP THREE MATES
+          WHO HAVE CREATED A EXCLUSIVE BRAND OF GRAPHIC STREETWEAR.
         </p>
       </div>
-
-      <div class="profiles">
-          <div class="profileImages">
-              <div1>1</div>
-              <div2>2</div>
-              <div3>3</div>
+      <div id="profilesContainer">
+          <div id="profileImages">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>4</div>
+            <div>5</div>
+            <div>6</div>
+            <div>7</div>
+            <div>8</div>
+            </div>
         </div>
       </div>
 
-      <div class="footer">
+      <div id="footerContainer">
+        <div id="footer">
+
         <p>Made By AW, LTB, JP.</p>
+
       </div>
+    </div>
+    </div>
+  </div>
     </body>
 </html>
