--- a/about.html
+++ b/about.html
@@ -48,15 +48,23 @@
         </p>
       </div>
       <div id="profilesContainer">
+        <h2>WHO ARE WE? </h2>
           <div id="profileImages">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-            <div>4</div>
-            <div>5</div>
-            <div>6</div>
-            <div>7</div>
-            <div>8</div>
+              <div>1</div>
+
+              <div>2</div>
+
+              <div>3</div>
+
+            </div>
+            <div id="profileInfo">
+              <h3>Alex</h3>
+              <h3>Liam</h3>
+              <h3>Josh</h3>
+
+              <p>test</p> <!-- Alex Description---> <!-- Add line breaks to go to next line -->
+              <p>test</p> <!-- Liam Description--->
+              <p>TestParagraph</p> <!-- Josh Description--->
             </div>
         </div>
       </div>
