--- a/store.html
+++ b/store.html
@@ -34,14 +34,46 @@
       </div>
 
       <div class="galleryContainer">
+<!--
+        <script>
+          // Get the modal
+          var modal = document.getElementById('myModal');
+
+          // Get the image and insert it inside the modal - use its "alt" text as a caption
+          var img = document.getElementById('myImg');
+          var modalImg = document.getElementById("img01");
+          var captionText = document.getElementById("caption");
+          img.onclick = function(){
+              modal.style.display = "block";
+              modalImg.src = this.src;
+              captionText.innerHTML = this.alt;
+          }
+
+          // Get the <span> element that closes the modal
+          var span = document.getElementsByClassName("close")[0];
+
+          // When the user clicks on <span> (x), close the modal
+          span.onclick = function() {
+              modal.style.display = "none";
+          }
+        </script>
+-->
         <div class="galleryImages">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
+
+            <div> <img src="designs/KurtShirt.jpg"> </div>
+
+            <div> <img src="designs/NasShirt.jpg"> </div>
+
+            <div> <img src="designs/GambinoShirt.jpg"> </div>
+
             <div>4</div>
+
             <div>5</div>
+
             <div>6</div>
+
             <div>7</div>
+
             <div>8</div>
         </div>
       </div>
