--- a/store.html
+++ b/store.html
@@ -60,7 +60,16 @@
 -->
         <div class="galleryImages">
 
-            <div> <img src="designs/KurtShirt.jpg"> </div>
+            <div> <a href="#KurtShirt"><img src="designs/KurtShirt.jpg"> </a>
+
+              <div class="modal" id="KurtShirt">
+                <div class="modalContainer">
+                  <img src="designs/KurtShirt.jpg" height="500px" width="400px">
+                  <a href="#modalClose">Close</a>
+
+              </div>
+            </div>
+          </div>
 
             <div> <img src="designs/NasShirt.jpg"> </div>
 
