--- a/about.html
+++ b/about.html
@@ -50,21 +50,31 @@
       <div id="profilesContainer">
         <h2>WHO ARE WE? </h2>
           <div id="profileImages">
-              <div>1</div>
+              <div>
+                <img src="profile/josh.jpg" alt="Josh" width="150px" height="200px">
+              </div>
 
-              <div>2</div>
+              <div>
+                <img src="profile/liam.jpg" alt="Liam" width="150px" height="200px">
+              </div>
 
-              <div>3</div>
+              <div>
+                <img src="profile/alex.jpg" alt="Alex" width="150px" height="200px">
+              </div>
 
             </div>
             <div id="profileInfo">
-              <h3>Alex</h3>
-              <h3>Liam</h3>
               <h3>Josh</h3>
+              <h3>Liam</h3>
+              <h3>Alex</h3>
 
               <p>test</p> <!-- Alex Description---> <!-- Add line breaks to go to next line -->
               <p>test</p> <!-- Liam Description--->
-              <p>TestParagraph</p> <!-- Josh Description--->
+              <p>
+                I am a Uni student currently interested in making movies and I.T.<br></br>
+                I enjoy clothing because it displays who you are as a person and
+                for me that is lazy.
+              </p> <!-- Josh Description--->
             </div>
         </div>
       </div>
