--- a/contact.html
+++ b/contact.html
@@ -2,42 +2,52 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Pyramid Clothing</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="img/logo1.png" type="image/png" sizes="60x60">
-  </head>
-    <body>
-      <div class="header">
-        <div class="nav">
+      <title>Pyramid Clothing</title>
 
-          <div class="logo">
+      <link rel="stylesheet" href="style.css">
+      <link rel="icon" href="img/logo1.png" type="image/png" sizes="60x60">
+
+    </head>
+
+      <body>
+
+        <div id="nav">
+              <div id="linksContainer">
+                <div id="links">
+                  <a href="index.html">HOME</a>
+
+                  <a href="store.html">STORE</a>
+
+                  <a href="about.html">ABOUT</a>
+
+                  <a href="contact.html">CONTACT</a>
+                </div>
+              </div>
+            </div>
+            <div id="contactHeader">
+              <div id="contactExternal">
+        <div id="contactContainer">
+            <div id="contactlogo">
             <a href="index.html">
-            <img src="img/logo1.png" alt="logo" width="60" height="45">
-            </a>
+              <img src="img/logo1.png" alt="logo" width="100" height="75">
+              </a>
+            </div>
+            <div id="contactLogoText">
+
+              <h3> - CONTACT US - </h3>
+
+            </div>
           </div>
         </div>
-
-          <div class="links">
-            <a href="index.html">HOME</a>
-            &bull;
-            <a href="store.html">STORE</a>
-            &bull;
-            <a href="about.html">ABOUT</a>
-            &bull;
-            <a href="contact.html">CONTACT</a>
-          </div>
-
       </div>
 
-      <div class="pyramid">
-        <h1>CONTACT US</h1>
-      <div class="social"
-        <a href=""></a>
-      </div>
-      </div>
 
-      <div class="footer">
-        <p>Made By AW, LTB, JP.</p>
+      <div id="pyramid">
+        <p>
+          Phone: 0278418971
+          <br></br>
+          Email: josh.phillips01@gmail.com
+        </p>
       </div>
     </body>
 </html>
