--- a/store.html
+++ b/store.html
@@ -7,31 +7,36 @@
     <link rel="icon" href="img/logo1.png" type="image/png" sizes="60x60">
   </head>
     <body>
-      <div class="header">
-        <div class="nav">
 
-          <div class="logo">
-            <a href="index.html">
-            <img src="img/logo1.png" alt="logo" width="60" height="45">
-            </a>
+          <div id="nav">
+                <div id="linksContainer">
+                  <div id="links">
+                    <a href="index.html">HOME</a>
+
+                    <a href="store.html">STORE</a>
+
+                    <a href="about.html">ABOUT</a>
+
+                    <a href="contact.html">CONTACT</a>
+                  </div>
+                </div>
+              </div>
+              <div id="storeHeader">
+                <div id="storeExternal">
+          <div id="storeContainer">
+              <div id="storelogo">
+              <a href="index.html">
+                <img src="img/logo1.png" alt="logo" width="100" height="75">
+                </a>
+              </div>
+              <div id="storeLogoText">
+
+                <h3> - STORE - </h3>
+
+              </div>
+            </div>
           </div>
-        </div>
-
-          <div class="links">
-            <a href="index.html">HOME</a>
-            &bull;
-            <a href="store.html">STORE</a>
-            &bull;
-            <a href="about.html">ABOUT</a>
-            &bull;
-            <a href="contact.html">CONTACT</a>
           </div>
-
-      </div>
-
-      <div class="pyramid">
-        <h1>STORE</h1>
-      </div>
 
       <div class="galleryContainer">
 <!--
@@ -75,15 +80,6 @@
 
             <div> <img src="designs/GambinoShirt.jpg"> </div>
 
-            <div>4</div>
-
-            <div>5</div>
-
-            <div>6</div>
-
-            <div>7</div>
-
-            <div>8</div>
         </div>
       </div>
 
