fix some issues but add to the media screen

--- a/store.html
+++ b/store.html
@@ -76,7 +76,7 @@
             </div>
           </div>
 
-            <div> <img src="designs/NasShirt.jpg"> </div>
+            <div> <a href="#NasShirt"><img src="designs/NasShirt.jpg"> </div>
 
             <div> <img src="designs/GambinoShirt.jpg"> </div>
 
