Fixed issues with Modal

--- a/about.html
+++ b/about.html
@@ -69,7 +69,9 @@
               <h3>Alex</h3>
 
               <p>test</p> <!-- Alex Description---> <!-- Add line breaks to go to next line -->
-              <p>test</p> <!-- Liam Description--->
+              <p>I am currently studying at Massey University, doing a
+                  bachelor in Creative Media Studies.<br></br>
+                  I enjoy designing clothing as it shows a lot of about a person.</p> <!-- Liam Description--->
               <p>
                 I am a Uni student currently interested in making movies and I.T.<br></br>
                 I enjoy clothing because it displays who you are as a person and
