--- a/store.html
+++ b/store.html
@@ -68,6 +68,7 @@
             <div> <a href="#KurtShirt"><img src="designs/KurtShirt.jpg"> </a>
 
               <div class="modal" id="KurtShirt">
+
                 <div class="modalContainer">
                   <img src="designs/KurtShirt.jpg" height="500px" width="400px">
                   <a href="#modalClose">Close</a>
@@ -76,9 +77,33 @@
             </div>
           </div>
 
-            <div> <img src="designs/NasShirt.jpg"> </div>
+            <div> <a href="#NasShirt"> <img src="designs/NasShirt.jpg"> </a>
 
-            <div> <img src="designs/GambinoShirt.jpg"> </div>
+              <div class="modal" id="NasShirt">
+                <div class="modalContainer">
+                  <img src="designs/NasShirt.jpg" height="500px" width="400px">
+                  <a href="#modalClose">Close</a>
+
+              </div>
+            </div>
+          </div>
+
+            <div> <a href="#GambinoShirt"> <img src="designs/GambinoShirt.jpg"> </a>
+
+              <div class="modal" id="GambinoShirt">
+                <div class="modalContainer">
+                  <img src="designs/GambinoShirt.jpg" height="500px" width="400px">
+                  <a href="#modalClose">Close</a>
+
+              </div>
+            </div>
+          </div>
+
+          <div> <a href=#
+
+
+
+          </div>
 
         </div>
       </div>
