Added more shirts

--- a/store.html
+++ b/store.html
@@ -99,7 +99,15 @@
             </div>
           </div>
 
-          <div> <a href=#
+          <div> <a href="#KanyeShirt"> <img src="designs/KanyeShirt.jpg"> </a>
+
+            <div class="modal" id="KanyeShirt">
+              <div class="modalContainer">
+                <img src="designs/KanyeShirt.jpg" height="500px" width="400px">
+                <a href="#modalClose">Close</a>
+
+            </div>
+          </div>
 
 
 
