--- a/store.html
+++ b/store.html
@@ -108,10 +108,30 @@
 
             </div>
           </div>
+        </div>
 
+        <div> <a href="#KendrickShirt"> <img src="designs/KendrickShirt.jpg"> </a>
 
+          <div class="modal" id="KendrickShirt">
+            <div class="modalContainer">
+              <img src="designs/KendrickShirt.jpg" height="500px" width="400px">
+              <a href="#modalClose">Close</a>
 
           </div>
+        </div>
+      </div>
+
+      <div> <a href="#AsapShirt"> <img src="designs/AsapShirt.jpg"> </a>
+
+        <div class="modal" id="AsapShirt">
+          <div class="modalContainer">
+            <img src="designs/AsapShirt.jpg" height="500px" width="400px">
+            <a href="#modalClose">Close</a>
+
+        </div>
+      </div>
+    </div>
+
 
         </div>
       </div>
