Jquery - Lightbox test
Look at store

--- a/store.html
+++ b/store.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>Pyramid Clothing</title>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> <!-- Jquery before Bootstrap -->
+  <link rel="stylesheet" href="jquery.fancybox.min.css" /> <!-- Bootstrap after Jquery -->
+  <script src="jquery.fancybox.min.js"></script>
     <link rel="stylesheet" href="store.css">
     <link rel="icon" href="img/logo1.png" type="image/png" sizes="60x60">
   </head>
@@ -39,6 +42,12 @@
           </div>
 
       <div class="galleryContainer">
+
+
+        <div class="galleryContainer">
+
+          <a data-fancybox="gallery" href="img/asapslide.jpg"><img src="img/kanyeslide.jpg"></a>
+
 <!--
         <script>
           // Get the modal
