Added More images

--- a/store.html
+++ b/store.html
@@ -47,6 +47,8 @@
         <div class="galleryContainer">
 
           <a data-fancybox="gallery" href="img/asapslide.jpg"><img src="img/kanyeslide.jpg"></a>
+          <a data-fancybox="gallery" href="designs/KurtShirt.jpg"><img src="designs/KurtShirt.jpg"></a>
+          <a data-fancybox="gallery" href="designs/NasShirt.jpg"><img src="designs/NasShirt.jpg"></a>
 
 <!--
         <script>
@@ -74,7 +76,7 @@
 -->
         <div class="galleryImages">
 
-            <div> <a href="#KurtShirt"><img src="designs/KurtShirt.jpg"> </a>
+            <div> <a data-fancybox="gallery" href="#KurtShirt"><img src="designs/KurtShirt.jpg"> </a>
 
               <div class="modal" id="KurtShirt">
 
