--- a/store.html
+++ b/store.html
@@ -43,12 +43,24 @@
 
       <div class="galleryContainer">
 
+        <div class="galleryImages">
 
-        <div class="galleryContainer">
+        <div> <a data-fancybox="gallery" href="designs/KurtShirt.jpg"><img src="designs/KurtShirt.jpg"></a>
+          <h3>$59.99</h3>
 
-          <a data-fancybox="gallery" href="img/asapslide.jpg"><img src="img/kanyeslide.jpg"></a>
-          <a data-fancybox="gallery" href="designs/KurtShirt.jpg"><img src="designs/KurtShirt.jpg"></a>
-          <a data-fancybox="gallery" href="designs/NasShirt.jpg"><img src="designs/NasShirt.jpg"></a>
+        </div>
+        <div> <a data-fancybox="gallery" href="designs/NasShirt.jpg"><img src="designs/NasShirt.jpg"></a> </div>
+        <div> <a data-fancybox="gallery" href="designs/GambinoShirt.jpg"><img src="designs/GambinoShirt.jpg"></a> </div>
+        <div> <a data-fancybox="gallery" href="designs/KanyeShirt.jpg"><img src="designs/KanyeShirt.jpg"></a> </div>
+        <div> <a data-fancybox="gallery" href="designs/KendrickShirt.jpg"><img src="designs/KendrickShirt.jpg"></a> </div>
+        <div> <a data-fancybox="gallery" href="designs/AsapShirt.jpg"><img src="designs/AsapShirt.jpg"></a> </div>
+
+      </div>
+    </div>
+
+
+
+
 
 <!--
         <script>
@@ -73,11 +85,12 @@
               modal.style.display = "none";
           }
         </script>
--->
+
         <div class="galleryImages">
 
             <div> <a data-fancybox="gallery" href="#KurtShirt"><img src="designs/KurtShirt.jpg"> </a>
-
+-->
+<!--
               <div class="modal" id="KurtShirt">
 
                 <div class="modalContainer">
@@ -146,7 +159,7 @@
 
         </div>
       </div>
-
+-->
 <!--
     <div class="store">
       <div class="gallery">
