--- a/store.html
+++ b/store.html
@@ -45,153 +45,19 @@
 
         <div class="galleryImages">
 
-        <div> <a data-fancybox="gallery" href="designs/KurtShirt.jpg"><img src="designs/KurtShirt.jpg"></a>
-          <h3>$59.99</h3>
-
-        </div>
+        <div> <a data-fancybox="gallery" href="designs/KurtShirt.jpg"><img src="designs/KurtShirt.jpg"></a></div>
         <div> <a data-fancybox="gallery" href="designs/NasShirt.jpg"><img src="designs/NasShirt.jpg"></a> </div>
         <div> <a data-fancybox="gallery" href="designs/GambinoShirt.jpg"><img src="designs/GambinoShirt.jpg"></a> </div>
         <div> <a data-fancybox="gallery" href="designs/KanyeShirt.jpg"><img src="designs/KanyeShirt.jpg"></a> </div>
         <div> <a data-fancybox="gallery" href="designs/KendrickShirt.jpg"><img src="designs/KendrickShirt.jpg"></a> </div>
         <div> <a data-fancybox="gallery" href="designs/AsapShirt.jpg"><img src="designs/AsapShirt.jpg"></a> </div>
+        <div> <a data-fancybox="gallery" href="designs/LogicShirt.jpg"><img src="designs/LogicShirt.jpg"></a> </div>
 
       </div>
     </div>
 
 
 
-
-
-<!--
-        <script>
-          // Get the modal
-          var modal = document.getElementById('myModal');
-
-          // Get the image and insert it inside the modal - use its "alt" text as a caption
-          var img = document.getElementById('myImg');
-          var modalImg = document.getElementById("img01");
-          var captionText = document.getElementById("caption");
-          img.onclick = function(){
-              modal.style.display = "block";
-              modalImg.src = this.src;
-              captionText.innerHTML = this.alt;
-          }
-
-          // Get the <span> element that closes the modal
-          var span = document.getElementsByClassName("close")[0];
-
-          // When the user clicks on <span> (x), close the modal
-          span.onclick = function() {
-              modal.style.display = "none";
-          }
-        </script>
-
-        <div class="galleryImages">
-
-            <div> <a data-fancybox="gallery" href="#KurtShirt"><img src="designs/KurtShirt.jpg"> </a>
--->
-<!--
-              <div class="modal" id="KurtShirt">
-
-                <div class="modalContainer">
-                  <img src="designs/KurtShirt.jpg" height="600px" width="500px">
-                  <a href="#modalClose">Close</a>
-
-              </div>
-            </div>
-          </div>
-
-            <div> <a href="#NasShirt"> <img src="designs/NasShirt.jpg"> </a>
-
-              <div class="modal" id="NasShirt">
-                <div class="modalContainer">
-                  <img src="designs/NasShirt.jpg" height="600px" width="500px">
-                  <a href="#modalClose">Close</a>
-
-              </div>
-            </div>
-          </div>
-
-            <div> <a href="#GambinoShirt"> <img src="designs/GambinoShirt.jpg"> </a>
-
-              <div class="modal" id="GambinoShirt">
-                <div class="modalContainer">
-                  <img src="designs/GambinoShirt.jpg" height="600px" width="500px">
-                  <a href="#modalClose">Close</a>
-
-              </div>
-            </div>
-          </div>
-
-          <div> <a href="#KanyeShirt"> <img src="designs/KanyeShirt.jpg"> </a>
-
-            <div class="modal" id="KanyeShirt">
-              <div class="modalContainer">
-                <img src="designs/KanyeShirt.jpg" height="600px" width="600px">
-                <a href="#modalClose">Close</a>
-
-            </div>
-          </div>
-        </div>
-
-        <div> <a href="#KendrickShirt"> <img src="designs/KendrickShirt.jpg"> </a>
-
-          <div class="modal" id="KendrickShirt">
-            <div class="modalContainer">
-              <img src="designs/KendrickShirt.jpg" height="600px" width="500px">
-              <a href="#modalClose">Close</a>
-
-          </div>
-        </div>
-      </div>
-
-      <div> <a href="#AsapShirt"> <img src="designs/AsapShirt.jpg"> </a>
-
-        <div class="modal" id="AsapShirt">
-          <div class="modalContainer">
-            <img src="designs/AsapShirt.jpg" height="600px" width="500px">
-            <a href="#modalClose">Close</a>
-
-        </div>
-      </div>
-    </div>
-
-
-        </div>
-      </div>
--->
-<!--
-    <div class="store">
-      <div class="gallery">
-        <a target="_blank" href="img/">
-          <img src="img/" alt="tee1" width="400" height="500">
-        </a>
-      </div>
-
-      <div class="gallery">
-        <a target="_blank" href="img/">
-          <img src="img/" alt="tee2" width="400" height="500">
-        </a>
-      </div>
-
-      <div class="gallery">
-        <a target="_blank" href="img/">
-          <img src="img/" alt="tee3" width="400" height="500">
-        </a>
-      </div>
-
-      <div class="gallery">
-        <a target="_blank" href="img/">
-          <img src="img/" alt="tee4" width="400" height="500">
-        </a>
-      </div>
-    </div>
-  -->
-
-  <!-- VAN YOU CHECK TO SEE WHY THE LOGOS WHEN GOING INBETWEEN
-  THE STORE AND HOME PAGE MOVES ? JUST CHECK THE CODE.
-
-  ILL ADD SOME DESIGNS TO THE PROJECT FOLDER SOON -->
 
       <div class="footer">
         <p>Made By AW, LTB, JP.</p>
