--- a/contact.html
+++ b/contact.html
@@ -49,5 +49,10 @@
           Email: josh.phillips01@gmail.com
         </p>
       </div>
+
+      <div class="footer">
+        <p>Made By AW, LTB, JP.</p>
+      </div>
+      
     </body>
 </html>
