--- a/index.html
+++ b/index.html
@@ -96,83 +96,12 @@
             <a href="store.html">SHOP NOW!</a>
 
           </div>
-      </div>
-
-      <!--
-            <div class="header">
-
-                <div class="logo">
-                  <a href="index.html">
-                  <img src="img/logo1.png" alt="logo" width="60" height="45">
-                  </a>
-                </div>
-              </div>
-
-                <div class="nav">
-                  <div class="links">
-                    <a href="index.html">HOME</a>
-                    &bull;
-                    <a href="store.html">STORE</a>
-                    &bull;
-                    <a href="about.html">ABOUT</a>
-                    &bull;
-                    <a href="contact.html">CONTACT</a>
-                  </div>
-                </div>
-
-
-            <div class="pyramid">
-              <h1>PYRAMID CLOTHING</h1>
-              <p>
-                Welcome to Pyramid Clothing. We started as a group of 3
-                mates and have created an exclusive brand of graphic streetwear.
-              </p>
-            </div>
-
-
-      <div class="banner">
-
-        <script>
-        	var i = 0; // Start point
-        	var images = [];
-        	var time = 1000;
-
-        	// Image List                          FIXED BY JOSH
-        	images[0] = src='img/WallSign.jpg';
-        	images[1] = 'img/WindowSign.jpg';
-        	images[2] = 'img/WallSign.png';
-        	images[3] = 'img/WindowSign.png';
-
-        	// Change Image
-        	function changeImg(){
-        		document.slide.src = images[i];
-
-        		if(i < images.length - 1){
-        			i++;
-        		} else {
-        			i = 0;
-        		}
-
-        		setTimeout("changeImg()", time);
-        	}
-
-        	window.onload = changeImg;
-
-        </script>
-
-          <img name="slide" width="960" height="500">
-
-
-      </div>
--->
-        <div id="footerContainer">
-          <div id="footer">
-
-          <p>Made By AW, LTB, JP.</p>
-
         </div>
       </div>
+
+      <div class="footer">
+        <p>Made By AW, LTB, JP.</p>
       </div>
-    </div>
+
     </body>
 </html>
