--- a/about.html
+++ b/about.html
@@ -79,16 +79,13 @@
               </p> <!-- Josh Description--->
             </div>
         </div>
-      </div>
 
-      <div id="footerContainer">
-        <div id="footer">
-
+        <div class="footer">
         <p>Made By AW, LTB, JP.</p>
-
       </div>
-    </div>
-    </div>
-  </div>
+
+
+
+
     </body>
 </html>
