--- a/about.html
+++ b/about.html
@@ -81,13 +81,10 @@
         </div>
       </div>
 
-      <div id="footerContainer">
-        <div id="footer">
-
+      <div class="footer">
         <p>Made By AW, LTB, JP.</p>
-
       </div>
-    </div>
+
     </div>
   </div>
     </body>
