--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
               <h3>Liam</h3>
               <h3>Alex</h3>
 
-              <p>test</p> <!-- Alex Description---> <!-- Add line breaks to go to next line -->
+              <p>I am a Design Visual Communication Student at Massey University. I love the ability to creat art which I can wear on my own shirt</p> <!-- Alex Description---> <!-- Add line breaks to go to next line -->
               <p>I am currently studying at Massey University, doing a
                   bachelor in Creative Media Studies.<br></br>
                   I enjoy designing clothing as it shows a lot of about a person.</p> <!-- Liam Description--->
@@ -79,7 +79,6 @@
               </p> <!-- Josh Description--->
             </div>
         </div>
-      </div>
 
       <div class="footer">
         <p>Made By AW, LTB, JP.</p>
@@ -87,5 +86,6 @@
 
     </div>
   </div>
+
     </body>
 </html>
