media screen update

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </div>
           <div id="logoNameContainer">
 
-            <h3> - PYRAMID CLOTHING - </h3>
+            <h3>PYRAMID CLOTHING</h3>
 
           </div>
         </div>
