--- a/contact.html
+++ b/contact.html
@@ -2,57 +2,84 @@
 <html>
   <head>
     <meta charset="utf-8" />
-      <title>Pyramid Clothing</title>
+    <title>Pyramid Clothing</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style2.css">
+    <link rel="icon" href="img/logo1.png" type="image/png" sizes="60x60">
+  </head>
+    <body>
+      <header>
+        <nav>
+          <div class="nav">
+                <div class="container">
+                  <div class="linkContainer">
+                    <div class="columns links">
+                      <a class="column" href="index.html">HOME</a>
 
-      <link rel="stylesheet" href="style.css">
-      <link rel="icon" href="img/logo1.png" type="image/png" sizes="60x60">
+                      <a class="column" href="store.html">STORE</a>
 
-    </head>
+                      <a class="column" href="about.html">ABOUT</a>
 
-      <body>
-
-        <div id="nav">
-              <div id="linksContainer">
-                <div id="links">
-                  <a href="index.html">HOME</a>
-
-                  <a href="store.html">STORE</a>
-
-                  <a href="about.html">ABOUT</a>
-
-                  <a href="contact.html">CONTACT</a>
+                      <a class="column" href="contact.html">CONTACT</a>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div id="contactHeader">
-              <div id="contactExternal">
-        <div id="contactContainer">
-            <div id="contactlogo">
-            <a href="index.html">
-              <img src="img/logo1.png" alt="logo" width="100" height="75">
-              </a>
-            </div>
-            <div id="contactLogoText">
-
-              <h3> - CONTACT US - </h3>
-
-            </div>
           </div>
+        </nav>
+    </header>
+
+<main>
+      <div class="container">
+          <div class="aboutHeader">
+              <div class="aboutHeaderExternal">
+                  <div class="aboutHeaderContainer">
+                      <div class="aboutlogo">
+                          <a href="index.html">
+                                <img src="img/logo1.png" alt="logo" width="100" height="75">
+                          </a>
+                      </div>
+                            <div class="aboutLogoText">
+
+                              <h3> - CONTACT US - </h3>
+
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    <div class="container">
+        <div class="pyramid">
+            <h1 class="has-text-centred">- PYRAMID CLOTHING -</h1>
+                <p>
+                  CONTACT US
+                </p>
+                <p>
+                  FEEL FREE TO ALWASY CONTACT US ON THE FOLLOWING:
+                </p>
+                <p>
+                  phone: 0226573234
+                  <br>
+                </br>
+                Email: joshua.phillips.nz@pyramid.clothing.com
+                <br>
+                Email: liam.trimB.nz@pyramid.clothing.com
+                <br>
+                Email: alex.willis.nz@pyramid.clothing.com
+                </p>
         </div>
       </div>
+    </div>
 
 
-      <div id="pyramid">
-        <p>
-          Phone: 0278418971
-          <br></br>
-          Email: josh.phillips01@gmail.com
-        </p>
-      </div>
-
-      <div class="footer">
+</main>
+<footer>
+        <div class="footer">
         <p>Made By AW, LTB, JP.</p>
       </div>
-      
+</footer>
+
+
     </body>
 </html>
