--- a/index.html
+++ b/index.html
@@ -3,57 +3,68 @@
   <head>
     <meta charset="utf-8" />
     <title>Pyramid Clothing</title>
-
-    <link rel="stylesheet" href="style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style2.css">
     <link rel="icon" href="img/logo1.png" type="image/png" sizes="60x60">
+<!--
+      <label class="m-icon" for="show-menu"><span class="hide">Show menu</span> not hidden<label>
+      <input type="checkbox" id="show-menu" />
+      <nav id="main-nav">
+        <a href="index.html">HOME</a>
+        <a href="store.html">STORE</a>
+        <a href="about.html">ABOUT</a>
+        <a href="contact.html">CONTACT</a>
+-->
+  <header>
+    <nav>
+      <div class="nav">
+            <div class="container">
+              <div class="linkContainer">
+                <div class="columns links">
+                  <a class="column" href="index.html">HOME</a>
 
-  </head>
-    <body>
+                  <a class="column" href="store.html">STORE</a>
 
-      <div id="nav">
-            <div id="linksContainer">
-              <div id="links">
-                <a href="index.html">HOME</a>
+                  <a class="column" href="about.html">ABOUT</a>
 
-                <a href="store.html">STORE</a>
-
-                <a href="about.html">ABOUT</a>
-
-                <a href="contact.html">CONTACT</a>
+                  <a class="column" href="contact.html">CONTACT</a>
               </div>
             </div>
           </div>
-          <div id="header">
-            <div id="headerExternal">
-      <div id="headerContainer">
-          <div id="logo">
+      </div>
+    </nav>
+  </header>
+
+  <main>
+          <div class="bigLogo">
+            <div class="bigLogoExternal">
+      <div class="bigLogoContainer">
+          <div class="logo">
           <a href="index.html">
             <img src="img/logo1.png" alt="logo" width="600" height="450">
             </a>
           </div>
-          <div id="logoNameContainer">
 
-            <h3> - PYRAMID CLOTHING - </h3>
-
-          </div>
         </div>
       </div>
     </div>
 
-
-    <div id="pyramid">
+<div class="container">
+    <div class="pyramid">
+      <h1 class="has-text-centred">- PYRAMID CLOTHING -</h1>
       <p>
         WELCOME TO PYRAMID CLOTHING.
       </p>
       <p>
-        WE STARTED AS A GROUP THREE MATES
+        WE STARTED AS A GROUP OF THREE MATES
         WHO HAVE CREATED A EXCLUSIVE BRAND OF GRAPHIC STREETWEAR.
       </p>
     </div>
+  </div>
 
-
-    <div id="banner">
-          <div id="bannerSlide">
+<div class="container">
+    <div class="banner">
+          <div class="bannerSlide">
 
             <script>
               var i = 0; // Start point
@@ -88,20 +99,23 @@
 
           </div>
         </div>
-
-        <div id= "postContainer">
-          <div id="shopButtonContainer">
-          <div id="shopButtonIndex">
+</div>
+        <div class= "container">
+          <div class="shopButtonContainer">
+          <div class="shopButtonIndex">
 
             <a href="store.html">SHOP NOW!</a>
 
           </div>
         </div>
+
       </div>
+</main>
+<footer>
       <div class="footer">
         <p>Made By AW, LTB, JP.</p>
       </div>
+</footer>
 
-
-    </body>
+  
 </html>
