--- a/about.html
+++ b/about.html
@@ -3,91 +3,116 @@
   <head>
     <meta charset="utf-8" />
     <title>Pyramid Clothing</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style2.css">
     <link rel="icon" href="img/logo1.png" type="image/png" sizes="60x60">
   </head>
     <body>
-        <div id="nav">
-              <div id="linksContainer">
-                <div id="links">
-                  <a href="index.html">HOME</a>
+      <header>
+        <nav>
+          <div class="nav">
+                <div class="container">
+                  <div class="linkContainer">
+                    <div class="columns links">
+                      <a class="column" href="index.html">HOME</a>
 
-                  <a href="store.html">STORE</a>
+                      <a class="column" href="store.html">STORE</a>
 
-                  <a href="about.html">ABOUT</a>
+                      <a class="column" href="about.html">ABOUT</a>
 
-                  <a href="contact.html">CONTACT</a>
+                      <a class="column" href="contact.html">CONTACT</a>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div id="aboutHeader">
-              <div id="aboutHeaderExternal">
-        <div id="aboutHeaderContainer">
-            <div id="aboutlogo">
-            <a href="index.html">
-              <img src="img/logo1.png" alt="logo" width="100" height="75">
-              </a>
-            </div>
-            <div id="aboutLogoText">
-
-              <h3> - ABOUT - </h3>
-
-            </div>
           </div>
+        </nav>
+    </header>
+
+<main>
+      <div class="container">
+          <div class="aboutHeader">
+              <div class="aboutHeaderExternal">
+                  <div class="aboutHeaderContainer">
+                      <div class="aboutlogo">
+                          <a href="index.html">
+                                <img src="img/logo1.png" alt="logo" width="100" height="75">
+                          </a>
+                      </div>
+                            <div class="aboutLogoText">
+
+                              <h3> - ABOUT - </h3>
+
+                            </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
 
 
-      <div id="pyramid">
-        <p>
-          WELCOME TO PYRAMID CLOTHING.
-        </p>
-        <p>
-          WE STARTED AS A GROUP THREE MATES
-          WHO HAVE CREATED A EXCLUSIVE BRAND OF GRAPHIC STREETWEAR.
-        </p>
-      </div>
+    <div class="container">
+        <div class="pyramid">
+            <h1 class="has-text-centred">- PYRAMID CLOTHING -</h1>
+                <p>
+                  WELCOME TO PYRAMID CLOTHING.
+                </p>
+                <p>
+                  WE STARTED AS A GROUP OF THREE MATES
+                  WHO HAVE CREATED A EXCLUSIVE BRAND OF GRAPHIC STREETWEAR.
+                </p>
+        </div>
+    </div>
 
-      <div id="profilesContainer">
+    <div class =container>
+      <div class="profilesContainer">
         <h2>WHO ARE WE? </h2>
-          <div id="profileImages">
-                <div>
-                  <img src="profile/josh.jpg" alt="Josh" width="150px" height="200px">
-                </div>
+          <div class="container">
 
-                <div>
-                  <img src="profile/liam.jpg" alt="Liam" width="150px" height="200px">
-                </div>
+              <div class="columns no-vertical-padding">
+                  <div class="column">
+                      <img src="profile/josh.jpg" alt="Josh" width="150px" height="200px">
+                  </div>
 
-                <div>
-                  <img src="profile/alex.jpg" alt="Alex" width="150px" height="200px">
-                </div>
+                  <div class="column">
+                    <img src="profile/liam.jpg" alt="Liam" width="150px" height="200px">
+                  </div>
 
+                  <div class="column">
+                    <img src="profile/alex.jpg" alt="Alex" width="150px" height="200px">
+                  </div>
+              </div>
+                  <div class="columns">
+                      <div class="column">
+                          <h3>Josh</h3>
+                          <p>I am a Design Visual Communication Student at Massey University.
+                          <br></br>I love the ability to create art which I can wear on my own shirt</p>
+                      </div>
+                        <div class="column">
+                          <h3>Liam</h3>
+                          <p>I am currently studying at Massey University, doing a
+                              bachelor in Creative Media Studies.<br></br>
+                              I enjoy designing clothing as it shows a lot of about a person.</p>
+                        </div>
+                      <div class="column">
+                          <h3>Alex</h3>
+                          <p>
+                            I am a Uni student currently interested in making movies and I.T.<br></br>
+                            I enjoy clothing because it displays who you are as a person and
+                            for me that is lazy.
+                          </p>
+                      </div>
+                  </div>
+                </div>
+                </div>
             </div>
-                <div id="profileInfo">
-                  <h3>Josh</h3>
-                  <h3>Liam</h3>
-                  <h3>Alex</h3>
-
-                  <p>I am a Design Visual Communication Student at Massey University. I love the ability to creat art which I can wear on my own shirt</p>
-                  <p>I am currently studying at Massey University, doing a
-                      bachelor in Creative Media Studies.<br></br>
-                      I enjoy designing clothing as it shows a lot of about a person.</p>
-                  <p>
-                    I am a Uni student currently interested in making movies and I.T.<br></br>
-                    I enjoy clothing because it displays who you are as a person and
-                    for me that is lazy.
-                  </p>
-                </div>
-            </div>
-        </div>
 
 
 
+</main>
+<footer>
         <div class="footer">
         <p>Made By AW, LTB, JP.</p>
       </div>
-
+</footer>
 
 
     </body>
