--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 
               // Image List                          FIXED BY JOSH
               images[0] = src='img/asapslide.jpg';
-              images[1] = 'img/WindowSign.jpg';
+              images[1] = 'img/WindowSign2.jpg';
               images[2] = 'img/kendrickslide.jpg';
-              images[3] = 'img/WallSign.jpg';
+              images[3] = 'img/WallSign2.jpg';
               images[4] = 'img/kanyeslide.jpg'
 
               // Change Image
